[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sac_graph5g"
version = "0.1.0"
description = "Research-Grade GNN + Reinforcement Learning for 5G Network Data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [
  {name = "Abdennour", email = "abdennour@example.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "torch>=2.0.0",
    "optuna>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sac_graph5g", "sac_graph5g.data", "sac_graph5g.models", "sac_graph5g.rl", "sac_graph5g.training"]

[tool.black]
line-length = 120
target-version = ['py310']
